# logstream

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci  Makefile  README.md  config.toml
.github/workflows/: ci.yml
src/: adaptive.rs  backfill.rs  buffer.rs  checkpoint.rs  config.rs  cw_counts.rs  cw_tail.rs  enrich.rs  es_bootstrap.rs  es_bulk_sink.rs  es_conflicts.rs  es_counts.rs  es_disk_guard.rs  es_disk_guard_logic.rs  es_http.rs  es_index.rs  es_query.rs  es_recovery.rs  es_refresh_tuner.rs  es_repair.rs  es_schema_heal.rs  es_url.rs  es_window.rs  event_router.rs  lib.rs  main.rs  migrate_daily.rs  naming.rs  process.rs  prune_state.rs  reconcile.rs  runner.rs  scheduler.rs  seasonal_stats.rs  state.rs  stress.rs  time_windows.rs  types.rs
tests/: adaptive_tests.rs  backfill_tests.rs  buffer_tests.rs  checkpoint_tests.rs  config_tests.rs  cw_tail_tests.rs  enrich_tests.rs  es_bootstrap_tests.rs  es_bulk_chunking_tests.rs  es_bulk_sink_tests.rs  es_counts_tests.rs  es_disk_guard_deadlock_tests.rs  es_disk_guard_logic_tests.rs  es_disk_guard_tests.rs  es_index_tests.rs  es_recovery_tests.rs  es_repair_logic_tests.rs  es_schema_heal_tests.rs  event_router_tests.rs  process_tests.rs  prune_state_tests.rs  reconcile_tests.rs  refresh_tuner_tests.rs  scheduler_tests.rs  seasonal_stats_tests.rs  state_tests.rs  stress_tests.rs  types_tests.rs
